Fix z-index to work with new Overlay component

--- a/components/Dialog/index.scss
+++ b/components/Dialog/index.scss
@@ -17,7 +17,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 21;
+  z-index: 40;
 
   a:hover {
     text-decoration: underline;
